Working on edit position of item.

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -8,6 +8,7 @@ pt-BR:
       done: Itens Prontos
       remove: Remover
       todo: Itens Para Fazer
+    saved: Lista atualizada com sucesso!
 
   lists:
     edit: Editar
